# chefs-eaters

./: CMakeLists.txt  Canibal.cpp  Canibal.hpp  Cozinheiro.cpp  Cozinheiro.hpp  Mutex.cpp  Mutex.hpp  README.md  Randomer.hpp  Travessa.cpp  Travessa.hpp  main.cpp
